# Apperu-Shell

./: .gitignore  README.en.md  README.ja.md  README.md  README.zh-TW.md  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: music-remote.json
src-tauri/src/: inject.js  main.rs  mpris.rs  state.rs
web/: index.html
