[package]
name = "apperu-shell"
version = "0.1.0"
description = "Performance-first Linux wrapper for Apple Music Web"
authors = ["Xarth-Mai"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
zbus = "4"
tokio = { version = "1", features = [
    "sync",
    "time",
    "rt-multi-thread",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
